force-app/main/default/objects/OpportunityLink__c/OpportunityLink__c.object-meta.xml
<CustomObject>
    <description>Objeto que almacena información de proyectos externos relacionados, como Moodboard o Tile Planner</description>
    <label>Sales Tool</label>
    <nameField>
        <label>Opportunity link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Tools</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>