force-app/main/default/objects/OpportunityLink__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Id of the external project</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>