force-app/main/default/objects/OpportunityLink__c/fields/isDefault__c.field-meta.xml
<CustomField>
    <fullName>isDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If it has been created automatically as a default one, we should mark it</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>