force-app/main/default/objects/OpportunityLink__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Opportunitylinks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>