force-app/main/default/objects/OpportunityLink__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Guarda el tipo de proyecto externo que es</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MOODBOARD</fullName>
                <label>Moodboard</label>
            </value>
            <value>
                <fullName>TILEPLANNER</fullName>
                <label>Tile Planner</label>
            </value>
            <value>
                <fullName>SELECT</fullName>
                <label>Select</label>
            </value>
            <value>
                <fullName>COUNTERTOP</fullName>
                <label>Counter Top</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>