force-app/main/default/objects/OpportunityLink__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <description>Url de la web donde está el proyecto externo. Hay que eliminarlo ya que todo irá a UrlText</description>
    <label>Url Link</label>
    <type>Url</type>
</CustomField>