force-app/main/default/objects/OpportunityLink__c/fields/UrlText__c.field-meta.xml
<CustomField>
    <fullName>UrlText__c</fullName>
    <description>Text with the Url link data</description>
    <label>Url</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>